# stproject

./: pyproject.toml
.devcontainer/: devcontainer.json
src/stproject/: __init__.py  calculatorapp.py  calculatorfile.py  myfirstst.py  stapp.py
